@@ -272,7 +272,7 @@ VinagreConnection *vinagre_connect (VinagreWindow *window)
 	}
       else
 	{
-	  vinagre_utils_show_error (error_msg ? error_msg : _("Unknown error"),
+	  vinagre_utils_show_error (NULL, error_msg ? error_msg : _("Unknown error"),
 				    GTK_WINDOW (window));
 	}
 fail:
