@@ -1,5 +1,9 @@
 2008-11-14  Jonh Wendell <jwendell@gnome.org>
 
+	* lots of files: Show a secondary text in all error dialogs.
+
+2008-11-14  Jonh Wendell <jwendell@gnome.org>
+
 	* src/vinagre-connection.[ch],
 	* src/vinagre-tab.c: Better parse a .vnc file. Closes #559525.
 
